# ProjektProgramistyczny2015

./: CMakeLists.txt  README.md  README.txt  consts.cpp  get_data.cpp  main.cpp  test_model.cpp  train.cpp  utils.cpp  utils.h
data/: face_points.txt  model3D.txt  reference_shape.txt  shapes.txt  triangles.txt
